tests/fixtures/invalid/missing_namespace.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>No namespace</name>
  </wpt>
</gpx>
